# camera_management

./: .gitignore  README.md  employees_data.json  filter_data.py  parser_data.py  pyproject.toml  requirements.txt
attendance/: admin.py  employees_data.csv  filters.py  models.py  tasks.py  utils.py
attendance/admin_tools/: actions.py  filters.py  helpers.py  reports.py
attendance/management/commands/: parsing_task.py
attendance/migrations/: 0001_initial.py
config/: settings.py  urls.py
data/: data_2024-05-01.json  data_2024-05-03.json  filter_2024-05-01.json  filter_2024-05-03.json  in_data_2024-05-03.json  in_filter_2024-05-03.json
scripts/: data_fill.py  data_filter.py  data_parser.py  data_set.py  emp_data.json  employees_data.json
